# IP-250306

./: .gitignore  .kraxio  README.md  SCADA.ini  SCADA.qrc  default.scada  ip-250306.desktop  pyproject.toml  pysca-hmi.desktop  resources
debian/: README  README.Debian  README.source  changelog  control  copyright  files  rules
gui/: __main__.py  _version.py
src/: krax.csv  krax.json  krax.py  project.py
ui/: Extensions.ui  Home.ui
